# katacoda-scenarios

./: LICENSE  README.md
conan/: courseBase.sh  index.json  intro.md  step1.1_whatsconan.md  step1.2_installConan.md  step1_consumePackages.md  step1_helloWorld.md  step2_consumePackages.md  step3_createlib.md  step4_uselib.md  step5_localworkflow.md
conan/assets/: CMakeLists.txt  CMakeLists_hello2.txt  wait.sh
conan/assets/hellolib/: CMakeLists.txt  conanfile.py  hello.cpp
conan/assets/helloworld2/: CMakeLists.txt
conan/assets/helloworld3/: hello3.cpp
conan/scripts/: courseBase.sh
conan/src/: main.cpp
